--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "express-hello-world",
+  "name": "express-app",
   "version": "1.0.0",
   "description": "Express Hello World on Render",
   "main": "app.js",
-  "repository": "https://github.com/render-examples/express-hello-world",
+  "repository": "https://github.com/Sohanlalkush/express-app",
   "author": "Render Developers",
   "license": "MIT",
   "private": false,
@@ -11,7 +11,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   },
   "engines": {
     "node": ">=14"
